# newspeak

./: LICENSE  README.md  dune-project  newspeak.opam
lib/: dune
test/: dune
